--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Install Lion - Root</string>
+    <string name="app_name">Install Lion-Root</string>
     <string name="start_install">Start installing</string>
     <string name="failed_read">Reading apk failed</string>
     <string name="success_install">Installed succeed</string>
-    <string name="failed_install">Installed failed </string>
-    <string name="dialog_title">Confirm installation ?</string>
+    <string name="failed_install">Installed failed</string>
+    <string name="dialog_title">Confirm installation</string>
     <string name="items">No longer confirmed in the future</string>
 
 </resources>
