--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="app_name">安装狮-Root</string>
     <string name="install_start">开始安装  %1$s</string>
+    <string name="uninstall_start">开始卸载 %1$s</string>
     <string name="failed_prase">无法解析</string>
     <string name="failed_read">读取apk失败</string>
     <string name="success_install"> %1$s 安装成功</string>
@@ -10,10 +11,16 @@
     <string name="failed_uninstall">卸载失败</string>
     <string name="dialog_install_title">确认安装</string>
     <string name="dialog_uninstall_title">卸载</string>
-    <string name="message_name">名称：</string>
-    <string name="message_packagename">包名：</string>
-    <string name="message_versionname">版本名：</string>
-    <string name="message_versioncode">版本号：</string>
+    <string name="message_name">名称：%1$s</string>
+    <string name="message_packagename">包名：%1$s</string>
+    <string name="message_version">版本：%1$s(%2$s)</string>
+    <string name="message_version_existed">现存：%1$s(%2$s)</string>
     <string name="message_uninstalConfirm">此操作不可撤销\n确认卸载吗?</string>
     <string name="always_allow">总是允许 %1$s</string>
+    <string name="cpoy_error">错误已复制到剪贴板</string>
+    <string name="installer_error_shell">%s 安装器错误:\n\n %s</string>
+    <string name="installer_device">设备</string>
+    <string name="installer_error_unknown_apk_size">无法获得APK大小</string>
+    <string name="installer_error_root_no_root">无法获取Root权限</string>
+
 </resources>
