--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="app_name">Install Lion-Root</string>
     <string name="install_start">Start installing  %1$s</string>
+    <string name="uninstall_start">Start uninstalling %1$s</string>
     <string name="failed_prase">Unable to parse</string>
     <string name="failed_read">Reading apk failed</string>
     <string name="success_install"> %1$s Installed succeed</string>
@@ -10,10 +11,16 @@
     <string name="failed_uninstall">Uninstalled failed</string>
     <string name="dialog_install_title">Confirm installation</string>
     <string name="dialog_uninstall_title">Uninstallation</string>
-    <string name="message_name">Name:</string>
-    <string name="message_packagename">Package Name:</string>
-    <string name="message_versionname">Version Name:</string>
-    <string name="message_versioncode">Version Code:</string>
-    <string name="message_uninstalConfirm">This operation is irrevocable\nConfirm uninstall?</string>
+    <string name="message_name">Name: %1$s</string>
+    <string name="message_packagename">Package Name: %1$s</string>
+    <string name="message_version">Version: %1$s (%2$s)</string>
+    <string name="message_version_existed">Existed: %1$s (%2$s)</string>
+    <string name="message_uninstalConfirm">This operation is irrevocable\nConfirm uninstallation?</string>
     <string name="always_allow">Always Allow %1$s</string>
+    <string name="cpoy_error">The error has been copied to the clipboard</string>
+    <string name="installer_error_shell">%s installer error:\n\n %s</string>
+    <string name="installer_device">Device</string>
+    <string name="installer_error_unknown_apk_size">installer_error_unknown_apk_size</string>
+    <string name="installer_error_root_no_root">Unable to acquire root access</string>
+
 </resources>
