--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Install Lion-Root</string>
+    <string name="app_name">Install Lion Root-MIUI</string>
+    <string name="uninstall_name">Uninstall</string>
     <string name="install_start">Start installing  %1$s</string>
     <string name="uninstall_start">Start uninstalling %1$s</string>
     <string name="failed_prase">Unable to parse</string>
