--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="failed_uninstall">Uninstalled failed</string>
     <string name="dialog_install_title">Confirm installation</string>
     <string name="dialog_uninstall_title">Uninstallation</string>
+    <string name="message_size">Size：%1$s</string>
     <string name="message_name">Name: %1$s</string>
     <string name="message_packagename">Package Name: %1$s</string>
     <string name="message_version">Version: %1$s (%2$s)</string>
