--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="failed_install">Installed failed</string>
     <string name="success_uninstall">Uninstalled succeed</string>
     <string name="failed_uninstall">Uninstalled failed</string>
-    <string name="dialog_install_title">Confirm installation</string>
+    <string name="dialog_install_title">Installation</string>
     <string name="dialog_uninstall_title">Uninstallation</string>
     <string name="message_size">Size：%1$s</string>
     <string name="message_name">Name: %1$s</string>
