--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -10,7 +10,7 @@
     <string name="failed_install">安装失败</string>
     <string name="success_uninstall">卸载成功</string>
     <string name="failed_uninstall">卸载失败</string>
-    <string name="dialog_install_title">确认安装</string>
+    <string name="dialog_install_title">安装</string>
     <string name="dialog_uninstall_title">卸载</string>
     <string name="message_size">大小：%1$s</string>
     <string name="message_name">名称：%1$s</string>
