--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -2,12 +2,13 @@
 <resources>
     <string name="app_name">安装狮-Root</string>
     <string name="start_install">开始安装  %1$s</string>
-    <string name="failed_prase">无法解析</string>
-    <string name="failed_read">读取apk失败</string>
-    <string name="success_install"> %1$s 安装成功</string>
-    <string name="failed_install">%1$s 安装失败,错误已复制到剪贴板\n%2$s</string>
-    <string name="success_uninstall">%1$s 卸载成功</string>
-    <string name="failed_uninstall">%1$s 卸载失败,错误已复制到剪贴板\n%2$s</string>
+    <string name="tip_failed_prase">无法解析</string>
+    <string name="tip_failed_read">读取apk失败</string>
+    <string name="tip_success_install">%1$s 安装成功</string>
+    <string name="tip_failed_install">%1$s 安装失败</string>
+    <string name="tip_failed_install_witherror">%1$s 安装失败,错误已复制到剪贴板\n%2$s</string>
+    <string name="tip_success_uninstall">%1$s 卸载成功</string>
+    <string name="tip_failed_uninstall_witherror">%1$s 卸载失败,错误已复制到剪贴板\n%2$s</string>
     <string name="dialog_install_title">安装</string>
     <string name="dialog_uninstall_title">卸载</string>
     <string name="message_size">大小：%1$s</string>
@@ -16,12 +17,30 @@
     <string name="message_version">版本：%1$s(%2$s)</string>
     <string name="message_version_existed">现存：%1$s(%2$s)</string>
     <string name="message_uninstalConfirm">此操作不可撤销\n确认卸载吗?</string>
-    <string name="always_allow">总是允许 %1$s</string>
-    <string name="installsource_unkonwn">未知安装来源</string>
+    <string name="checkbox_always_allow">总是允许 %1$s</string>
+    <string name="checkbox_installsource_unkonwn">未知安装来源</string>
     <string name="installer_error_shell">%s 安装器错误:\n\n%s</string>
     <string name="installer_device">设备</string>
     <string name="installer_error_unknown_apk_size">无法获得APK大小</string>
     <string name="installer_error_root_no_root">无法获取Root权限</string>
+    <string name="title_show_root_no_click2request">未获取Root权限,点击申请</string>
+    <string name="title_show_root_yes">已获取Root权限</string>
     <string name="launch_name">启动应用</string>
     <string name="unknown">未知</string>
+
+    <string name="ClearAllowedList">清空允许安装列表</string>
+    <string name="HideIcon">隐藏图标</string>
+    <string name="checkbox_ClearAllowedList">确认清空</string>
+    <string name="message_ClearAllowedList">\n清空安装前无需确认的应用列表\n</string>
+    <string name="message_HideIcon">你可以通过以下方式打开应用设置\n\n1.系统应用信息-管理空间\n2.拨号 *#*#297668#*#*\n3.系统应用信息-其他设置\n</string>
+    <string name="tip_exit">再按一次退出程序</string>
+
+    <string name="show_tip">安装结束后显示通知，点击通知可打开应用</string>
+    <string name="show_title">显示通知</string>
+    <string name="summary_off_needconfirm">始终不显示安装前确认的对话框</string>
+    <string name="summary_on_needconfirm">用户选择安装前无需确认的应用</string>
+    <string name="confirm_title">安装前确认</string>
+    <string name="click_run"> %1$s, 点击打开应用</string>
+    <string name="channalname_fail">安装失败</string>
+
 </resources>
