--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,13 @@
 <resources>
     <string name="app_name">Install Lion-Root</string>
     <string name="start_install">Start installing  %1$s</string>
-    <string name="failed_prase">Unable to parse</string>
-    <string name="failed_read">Reading apk failed</string>
-    <string name="success_install"> %1$s Installed succeed</string>
-    <string name="failed_install">%1$s Installed failed,The error has been copied to the clipboard\n%2$s</string>
-    <string name="success_uninstall">%1$s Uninstalled succeed</string>
-    <string name="failed_uninstall">%1$s Uninstalled failed,The error has been copied to the clipboard\n%2$s</string>
+    <string name="tip_failed_prase">Unable to parse</string>
+    <string name="tip_failed_read">Reading apk failed</string>
+    <string name="tip_success_install">%1$s Installed succeed</string>
+    <string name="tip_failed_install">%1$s Installed failed</string>
+    <string name="tip_failed_install_witherror">%1$s Installed failed,The error has been copied to the clipboard\n%2$s</string>
+    <string name="tip_success_uninstall">%1$s Uninstalled succeed</string>
+    <string name="tip_failed_uninstall_witherror">%1$s Uninstalled failed,The error has been copied to the clipboard\n%2$s</string>
     <string name="dialog_install_title">Installation</string>
     <string name="dialog_uninstall_title">Uninstallation</string>
     <string name="message_size">Size：%1$s</string>
@@ -16,12 +17,30 @@
     <string name="message_version">Version: %1$s (%2$s)</string>
     <string name="message_version_existed">Existed: %1$s (%2$s)</string>
     <string name="message_uninstalConfirm">This operation is irrevocable\nConfirm uninstallation?</string>
-    <string name="always_allow">Always Allow %1$s</string>
-    <string name="installsource_unkonwn">Unknown installation source</string>
+    <string name="checkbox_always_allow">Always Allow %1$s</string>
+    <string name="checkbox_installsource_unkonwn">Unknown installation source</string>
     <string name="installer_error_shell">%s installer error:\n\n%s</string>
     <string name="installer_device">Device</string>
     <string name="installer_error_unknown_apk_size">installer_error_unknown_apk_size</string>
     <string name="installer_error_root_no_root">Unable to acquire root access</string>
+    <string name="title_show_root_no_click2request">Not granted root permission,click to request</string>
+    <string name="title_show_root_yes">Have Root permission</string>
     <string name="launch_name">Run App</string>
     <string name="unknown">Unknown</string>
+
+    <string name="ClearAllowedList">Clear allowed installation list</string>
+    <string name="HideIcon">Hide Icon</string>
+    <string name="checkbox_ClearAllowedList">Confirm Clear</string>
+    <string name="message_ClearAllowedList">\nClear the list of apps you don\'t need to confirm before installation\n</string>
+    <string name="message_HideIcon">You can open the app settings in the following way\n\nSystem App Info-Manage space\n2.1.Dialer *#*#297668#*#*\n3.System App Info-Additional settings\n</string>
+
+    <string name="tip_exit">Press back again to exit</string>
+
+    <string name="show_tip">Show notification after installation,You can run the app by clicking the notification</string>
+    <string name="show_title">Show notification</string>
+    <string name="summary_off_needconfirm">Never display a confirmation dialog  before installation</string>
+    <string name="summary_on_needconfirm">User selects the application without confirmation before installation</string>
+    <string name="confirm_title">Confirmation before installation</string>
+    <string name="click_run">" %1$s, Click to run the app"</string>0
+    <string name="channalname_fail">Installed failed</string>
 </resources>
